--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "This project is about confession.",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "md5": "^2.3.0",
     "mongoose": "^5.13.3",
     "mongoose-encryption": "^2.1.0",
-    "nodemon": "^2.0.12"
+    "mongoose-findorcreate": "^3.0.0",
+    "nodemon": "^2.0.12",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0"
   },
   "devDependencies": {},
   "scripts": {
